--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Login - Stackoverflow lite</title>
-    <link rel="stylesheet" href="../static/css/styles.css" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css') }}" />
     <style>
       .alert {
         padding: 10px;
@@ -65,13 +65,8 @@
                   required="true"
                 />
               </div>
-              <div
-                class="form-group"
-                style="margin-left: 30px; margin-right: 30px"
-              >
-                <button
-                  class="btn btn-primary bg-orange p-15 btn-block"
-                >
+              <div class="form-group" style="margin-left: 30px; margin-right: 30px">
+                <button class="btn btn-primary bg-orange p-15 btn-block">
                   Login
                 </button>
               </div>
