--- a/templates/questions.html
+++ b/templates/questions.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Questions - Stackoverflow lite</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static',filename='css/styles.css') }}"
-    />
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css') }}"/>
   </head>
   <body>
     <div class="main">
@@ -17,11 +14,7 @@
         <!-- logo -->
         <div>
           <a href="{{url_for('home')}}">
-            <img
-              class="sidebar__logo-backend"
-              src="{{ url_for('static',filename='img/logo.png') }}"
-              alt="logo"
-            />
+            <img class="sidebar__logo-backend" src="{{ url_for('static',filename='img/logo.png') }}" alt="logo"/>
           </a>
         </div>
         <!-- ./logo -->
@@ -29,37 +22,25 @@
           <ul class="sidebar-items__nav nav column">
             <li class="sidebar-items__nav--active">
               <a class="active-text" href="{{url_for('questions',tag='all')}}">
-                <img
-                  class="icon"
-                  src="{{ url_for('static',filename='img/question-mark.svg') }}"
-                />
+                <img class="icon" src="{{ url_for('static',filename='img/question-mark.svg') }}"/>
                 <span class="sidebar-items__text">Questions</span>
               </a>
             </li>
             <li class="">
               <a href="{{url_for('tagpage',page_no=1,flag=True)}}">
-                <img
-                  class="icon"
-                  src="{{ url_for('static',filename='img/price-tag.svg') }}"
-                />
+                <img class="icon" src="{{ url_for('static',filename='img/price-tag.svg') }}"/>
                 <span class="sidebar-items__text">Tags</span>
               </a>
             </li>
             <li class="">
               <a href="{{url_for('askQuestion')}}">
-                <img
-                  class="icon"
-                  src="{{ url_for('static',filename='img/thumbs-up.svg') }}"
-                />
+                <img class="icon" src="{{ url_for('static',filename='img/thumbs-up.svg') }}"/>
                 <span class="sidebar-items__text">Ask a Question</span>
               </a>
             </li>
             <li>
               <a href="{{url_for('profile')}}">
-                <img
-                  class="icon"
-                  src="{{ url_for('static',filename='img/user.svg') }}"
-                />
+                <img class="icon" src="{{ url_for('static',filename='img/user.svg') }}"/>
                 <span class="sidebar-items__text">Profile</span>
               </a>
             </li>
@@ -83,31 +64,22 @@
             <div class="pull-right">
               <ul class="nav">
                 {%if 'id' not in session.keys()%}
-                <li>
-                  <a
-                    href="{{url_for('login')}}"
-                    class="text-white floating btn btn-round mt--5 bg-orange"
-                  >
-                    Login
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="{{url_for('register')}}"
-                    class="text-white floating btn btn-round mt--5 bg-orange"
-                  >
-                    Sign Up
-                  </a>
-                </li>
-                {%endif%} {%if 'id' in session.keys()%}
-                <li>
-                  <a
-                    href="{{url_for('logout')}}"
-                    class="btn btn-round mt--5 bg-orange"
-                  >
-                    Log out
-                  </a>
-                </li>
+                  <li>
+                    <a href="{{url_for('login')}}" class="text-white floating btn btn-round mt--5 bg-orange">
+                      Login
+                    </a>
+                  </li>
+                  <li>
+                    <a href="{{url_for('register')}}" class="text-white floating btn btn-round mt--5 bg-orange">>
+                      Sign Up
+                    </a>
+                  </li>
+                {%else%}
+                  <li>
+                    <a href="{{url_for('logout')}}" class="btn btn-round mt--5 bg-orange">
+                      Log out
+                    </a>
+                  </li>
                 {%endif%}
               </ul>
             </div>
@@ -132,58 +104,51 @@
               </div>
               <div class="panel bg-white">
                 <div class="panel__heading">
-                  <div
-                    class="mega-text text-primary"
-                    style="margin-top: 10px; margin-bottom: 10px"
-                  >
+                  <div class="mega-text text-primary" style="margin-top: 10px; margin-bottom: 10px">
                     {% if tag!="all" %} {{tag}} questions {% else %} All
                     Questions {% endif %}
                   </div>
                   <div class="clearfix bb"></div>
-
                 </div>
                 <div class="panel__body m-20">
-                  {% if n==0 %} No questions available {% else %} {% for
-                  id,title in ques %}
-                  <div class="question-list-item">
-                    <div class="col-6">
-                      <h2>
-                        <a class="text-primary" href="#"> {{title}} </a>
-                      </h2>
-                      {% for t in tags[loop.index0] %}
-                      <button class="btn btn-badge btn-link">{{t}}</button>
-                      {% endfor %}
-                      <h5 class="text-grey">
-                        Asked by
-                        <span class="text-primary"
-                          >{{users[loop.index0][1]}}</span
-                        >
-                      </h5>
+                  {% if n==0 %} 
+                    No questions available 
+                  {% endif %} 
+                  {% for id,title in ques %}
+                    <div class="question-list-item">
+                      <div class="col-6">
+                        <h2>
+                          <a class="text-primary" href="{{url_for('quespage',id=id)}}"> {{title}} </a>
+                        </h2>
+                        {% for t in tags[loop.index0] %}
+                        <button class="btn btn-badge btn-link">{{t}}</button>
+                        {% endfor %}
+                        <h5 class="text-grey">
+                          Asked by
+                          <span class="text-primary">{{users[loop.index0][1]}}</span>
+                        </h5>
+                      </div>
+                      <!-- right icons  -->
+                      <div class="col-6">
+                        <h4>&nbsp;</h4>
+                        <table class="text-center stats-box">
+                          <tr>
+                            <td>{{anscnt[loop.index0]}}</td>
+                          </tr>
+                          <tr>
+                            <td>Answers</td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img class="icon" src="{{ url_for('static',filename='img/paper-plane.svg') }}"/>
+                            </td>
+                          </tr>
+                        </table>
+                      </div>
+                      <!-- ./right icons -->
                     </div>
-                    <!-- right icons  -->
-                    <div class="col-6">
-                      <h4>&nbsp;</h4>
-                      <table class="text-center stats-box">
-                        <tr>
-                          <td>{{anscnt[loop.index0]}}</td>
-                        </tr>
-                        <tr>
-                          <td>Answers</td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <img
-                              class="icon"
-                              src="{{ url_for('static',filename='img/paper-plane.svg') }}"
-                            />
-                          </td>
-                        </tr>
-                      </table>
-                    </div>
-                    <!-- ./right icons -->
-                  </div>
-                  <div class="clearfix bb"></div>
-                  {% endfor %} {% endif %}
+                    <div class="clearfix bb"></div>
+                  {% endfor %}
                 </div>
               </div>
             </div>
@@ -196,6 +161,4 @@
 		<script src="{{url_for('static',filename='js/autocomp.js')}}"></script>
 		<link rel="stylesheet" href="{{url_for('static',filename='css/autocomp.css')}}">
   </body>
-
-  <!-- <script src="./js/main.js"></script> -->
 </html>
