--- a/templates/profile.html
+++ b/templates/profile.html
@@ -156,7 +156,7 @@
                                 <div class="question-list-item">
                                     <div class="col-6">
                                         <h2>
-                                            <a class="text-primary" href="#"> {{title}} </a>
+                                            <a class="text-primary" href="{{url_for('quespage',id=id)}}"> {{title}} </a>
                                         </h2>
                                         {% for t in tags[loop.index0] %}
                                         <button class="btn btn-badge btn-link">{{t}}</button>
