search icon changed

--- a/templates/quespage.html
+++ b/templates/quespage.html
@@ -58,8 +58,8 @@
                     </li>
                     <li class="">
                         <a href="{{url_for('searchQuestion')}}">
-                          <img class="icon" src="{{ url_for('static',filename='img/search.png') }}"/>
-                          <span class="sidebar-items__text">Search a Question</span>
+                          <img class="icon" src="{{ url_for('static',filename='img/loupe.svg') }}"/>
+                          <span class="sidebar-items__text">Search for a Question</span>
                         </a>
                     </li>
                     <li class="">
