--- a/templates/questions.html
+++ b/templates/questions.html
@@ -34,8 +34,8 @@
             </li>
             <li class="">
               <a href="{{url_for('searchQuestion')}}">
-                <img class="icon" src="{{ url_for('static',filename='img/search.png') }}"/>
-                <span class="sidebar-items__text">Search a Question</span>
+                <img class="icon" src="{{ url_for('static',filename='img/loupe.svg') }}"/>
+                <span class="sidebar-items__text">Search for a Question</span>
               </a>
             </li>
             <li class="">
