added date,time rendering in search and ask question page

--- a/templates/searchQuestion.html
+++ b/templates/searchQuestion.html
@@ -168,6 +168,8 @@
                           <span class="text-primary">
                             {{users[loop.index0][1]}}
                           </span>
+                          on
+                          <span class="text-primary">{{q[2].strftime("%d-%b-%Y %H:%M")}}</span>
                         </h5>
                       </div>
                       <!-- right icons  -->
